新增三个功能 修改框架